codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__skills_toggle_view__tests__skills_toggle_basic.snap
---
source: tui/src/bottom_pane/skills_toggle_view.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Enable/Disable Skills                                                 
  Only enabled skills are shown to the model. Available skills stay of  
                                                                        
  Type to search skills                                                 
  >                                                                     
› [x] Repo Scout        Summarize the repo layout · Source: repo        
  [ ] Changelog Writer  Draft release notes · Source: yours             
                                                                        
  Press space or enter to toggle; esc to close
