codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__skills_toggle_view__tests__skills_toggle_long_names_use_available_width.snap
---
source: tui/src/bottom_pane/skills_toggle_view.rs
expression: "render_lines(&view, 96)"
---
                                                                                                
  Enable/Disable Skills                                                                         
  Only enabled skills are shown to the model. Available skills stay off until you select them.  
                                                                                                
  Type to search skills                                                                         
  >                                                                                             
› [x] superpowers-systematic-debugging (polish)            Find root causes before fixing bug…  
  [ ] superpowers-verification-before-completion (polish)  Verify completion before claiming …  
                                                                                                
  Press space or enter to toggle; esc to close
